<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/ProgressBarStyle" />

    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Error" />

        <Button
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_retry"
            android:textAllCaps="false"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingAppBarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:statusBarScrim="?attr/colorPrimaryVariant"
                tools:title="Test Text">

                <ImageView
                    android:id="@+id/collapseCharAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:contentDescription="@string/collapse_description"
                    android:fitsSystemWindows="true"
                    android:src="@drawable/ic_char_avatar"
                    app:layout_collapseMode="parallax" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/title_background_shadow" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetStart="0dp"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light">

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/blue_light"
                    app:cardCornerRadius="24dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/tvCharLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/character_label"
                            android:textSize="24sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvNicknameLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/nickname_label"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvCharLabel" />

                        <TextView
                            android:id="@+id/tvNickname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="Heisenberg"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBaseline_toBaselineOf="@+id/tvNicknameLabel"
                            app:layout_constraintStart_toEndOf="@+id/tvNicknameLabel" />

                        <TextView
                            android:id="@+id/tvBirthdayLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/birthday_label"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="@+id/tvNicknameLabel"
                            app:layout_constraintTop_toBottomOf="@+id/tvNicknameLabel" />

                        <TextView
                            android:id="@+id/tvBirthday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="9 июля 1958"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBaseline_toBaselineOf="@+id/tvBirthdayLabel"
                            app:layout_constraintStart_toEndOf="@+id/tvBirthdayLabel" />

                        <TextView
                            android:id="@+id/tvStatusLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/status_label"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="@+id/tvBirthdayLabel"
                            app:layout_constraintTop_toBottomOf="@+id/tvBirthdayLabel" />

                        <TextView
                            android:id="@+id/tvStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="Presumed dead"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBaseline_toBaselineOf="@+id/tvStatusLabel"
                            app:layout_constraintStart_toEndOf="@+id/tvStatusLabel" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/yellow_light"
                    app:cardCornerRadius="24dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/tvOccupationLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/occupation_label"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/tvOccupation"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_below="@id/tvOccupationLabel"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:gravity="center"
                            android:text="High School Chemistry Teacher,\nMeth King Pin"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/green_light"
                    app:cardCornerRadius="24dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/tvAppearanceLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/appearance_label"
                            android:textSize="24sp" />

                        <LinearLayout
                            android:id="@+id/llBBAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_below="@id/tvAppearanceLabel"
                            android:layout_centerHorizontal="true"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginTop="16dp"
                                android:gravity="center"
                                android:text="@string/appearance_name"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvAppearanceBBSeasons"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="1,2,3,4,5"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llBCSAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_below="@id/llBBAppearance"
                            android:layout_centerHorizontal="true"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/tvAppearanceBCS"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:text="@string/appearance_better_call_saul_name"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvAppearanceBCSSeasons"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="1,2,3,4,5"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="16dp"
                    android:backgroundTint="@color/purple_light"
                    app:cardCornerRadius="24dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/tvActorLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/actor_label"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/tvActor"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_below="@id/tvActorLabel"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:gravity="center"
                            android:text="Bryan Cranston"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/ivActorPhoto"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_below="@id/tvActor"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/description_actor_photo"
                            android:src="@drawable/ic_char_avatar" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</FrameLayout>